<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.innoventus.task.presentation.form.FormViewModel" />

        <import
            alias="event"
            type="com.innoventus.task.domain.interactor.ClickEvent" />

        <import type="com.innoventus.task.util.StringExtKt" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_30sdp"
        android:paddingVertical="@dimen/_16sdp">

        <TextView
            android:id="@+id/tv_header"
            style="@style/HeaderTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_header"
            android:textColor="@color/red"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/HeaderTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="start"
            android:text="@string/form_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_45sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <TextView
                android:id="@+id/tv_pan_prompt"
                style="@style/PromptTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pan_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pan_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:textColorHint="@color/light_grey"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/tv_pan_prompt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_pan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pan_eg"
                    android:maxLength="10"
                    android:text="@={viewModel.panNumberLiveData}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_dob_prompt"
                style="@style/PromptTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/birthdate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_pan_number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_day"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:textColorHint="@color/light_grey"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dob_prompt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/day_eg"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:maxLength="2"
                    android:text="@={viewModel.dayLiveData}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_month"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:textColorHint="@color/light_grey"
                app:hintEnabled="false"
                app:layout_constraintStart_toEndOf="@+id/til_day"
                app:layout_constraintTop_toBottomOf="@+id/tv_dob_prompt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/month_eg"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:maxLength="2"
                    android:text="@={viewModel.monthLiveData}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_year"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:textColorHint="@color/light_grey"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/til_month"
                app:layout_constraintTop_toBottomOf="@+id/tv_dob_prompt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/year_eg"
                    android:imeOptions="actionDone"
                    android:inputType="date"
                    android:maxLength="4"
                    android:text="@={viewModel.yearLiveData}" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_info"
            style="@style/PromptTextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/tv_info"
            android:textAllCaps="false"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            style="@style/RegularButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:enabled="@{viewModel.isValid(viewModel.panNumberLiveData, viewModel.dayLiveData, viewModel.monthLiveData, viewModel.yearLiveData)}"
            android:onClick="@{()-> viewModel.onButtonClick(event.BUTTON)}"
            android:text="@string/next"
            app:layout_constraintBottom_toTopOf="@+id/tv_no_pan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_no_pan"
            style="@style/PromptTextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:onClick="@{()-> viewModel.onButtonClick(event.TEXT)}"
            android:text="@string/tv_no_pan"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="@dimen/_14ssp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>